[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/GUI/Blue_Square.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/therok-regular-400.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Images/blackScreen.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/therok_regular.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Fonts/KiriFont.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/MainMenuLogic.gd" type="Script" id=6]
[ext_resource path="res://Scenes/CreditsScene.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Fonts/Kaph-Regular.otf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/GUI/IconButton_Large_Orange_Circle_Pressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/IconButton_Large_Orange_Circle.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/Icon_Exit.png" type="Texture" id=11]
[ext_resource path="res://Assets/GUI/Icon_Settings.png" type="Texture" id=12]
[ext_resource path="res://Assets/GUI/Icon_Play.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/pilot-logo.png" type="Texture" id=14]
[ext_resource path="res://Assets/Icons/ic_launcher.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=35]
size = 130
outline_size = 6
outline_color = Color( 0.776471, 0.776471, 0.776471, 1 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=23]
size = 130
outline_size = 5
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=24]
size = 130
outline_size = 2
outline_color = Color( 0.878431, 0.639216, 0.352941, 1 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=30]
size = 23
outline_size = 2
outline_color = Color( 0.776471, 0.776471, 0.776471, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=25]
size = 23
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=26]
size = 23
use_filter = true
font_data = ExtResource( 8 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=31]
size = 25
outline_size = 2
outline_color = Color( 0.776471, 0.776471, 0.776471, 1 )
use_filter = true
font_data = ExtResource( 8 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=27]
size = 25
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
font_data = ExtResource( 8 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=28]
size = 25
use_filter = true
font_data = ExtResource( 8 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=32]
size = 25
outline_size = 1
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=33]
size = 25
use_filter = true
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=36]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 176, 159 )

[sub_resource type="DynamicFont" id=21]
size = 35
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )
fallback/0 = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=37]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 192, 192 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 14.0
rect_scale = Vector2( 1, 0.977002 )
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TitleLabel2" type="Label" parent="Panel"]
anchor_left = 0.0126953
anchor_top = 0.013336
anchor_right = 0.973633
anchor_bottom = 0.306496
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 12
custom_fonts/font = SubResource( 35 )
text = "Toofia"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="TitleLabel" type="Label" parent="Panel"]
anchor_left = 0.0136719
anchor_top = 0.00666801
anchor_right = 0.969727
anchor_bottom = 0.303085
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 12
custom_fonts/font = SubResource( 23 )
text = "Toofia"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="TitleLabel2" type="Label" parent="Panel/TitleLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 12
custom_fonts/font = SubResource( 24 )
text = "Toofia"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="SubTitleLabel2" type="Label" parent="Panel"]
anchor_left = 0.163086
anchor_top = 0.26672
anchor_right = 0.838867
anchor_bottom = 0.354668
margin_top = -1.52588e-05
margin_bottom = -1.52588e-05
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 30 )
text = "Kasangkapang Tulong pang-edukasyon"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="SubTitleLabel" type="Label" parent="Panel"]
anchor_left = 0.162109
anchor_top = 0.265053
anchor_right = 0.838867
anchor_bottom = 0.353001
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 25 )
text = "Kasangkapang Tulong pang-edukasyon"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="SubTitleLabel2" type="Label" parent="Panel/SubTitleLabel"]
anchor_left = -0.00106838
anchor_top = -0.0491803
anchor_right = 0.998932
anchor_bottom = 0.95082
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 26 )
text = "Kasangkapang Tulong pang-edukasyon"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="displayGreet2" type="Label" parent="Panel"]
anchor_left = 0.198242
anchor_top = 0.353404
anchor_right = 0.811523
anchor_bottom = 0.421808
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 31 )
text = "maligayang pagbabalik !"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="displayGreet" type="Label" parent="Panel"]
anchor_left = 0.196289
anchor_top = 0.351737
anchor_right = 0.813477
anchor_bottom = 0.418513
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 27 )
text = "maligayang pagbabalik !"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="displayLabel2" type="Label" parent="Panel/displayGreet"]
anchor_top = -0.0249648
anchor_right = 1.0
anchor_bottom = 0.863925
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 28 )
text = "maligayang pagbabalik !"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="showName1" type="Label" parent="Panel"]
unique_name_in_owner = true
anchor_left = 0.195313
anchor_top = 0.45114
anchor_right = 0.81543
anchor_bottom = 0.511401
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 32 )
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="showName2" type="Label" parent="Panel/showName1"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 33 )
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="nameLine" type="HSeparator" parent="Panel"]
anchor_left = 0.194336
anchor_top = 0.508143
anchor_right = 0.807617
anchor_bottom = 0.516287
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="SchoolLogo" type="Panel" parent="."]
anchor_left = 0.830078
anchor_top = 0.036674
anchor_right = 0.976563
anchor_bottom = 0.271202
custom_styles/panel = SubResource( 36 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="schoolLabel" type="Label" parent="SchoolLogo"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 21 )
text = "school
logo"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="GameIcon" type="Panel" parent="."]
anchor_left = 0.0234375
anchor_top = 0.036674
anchor_right = 0.169922
anchor_bottom = 0.269573
custom_styles/panel = SubResource( 37 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="GameIcon"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Game Icon"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="credits2" type="Label" parent="."]
anchor_left = 0.229492
anchor_top = 0.786645
anchor_right = 0.373047
anchor_bottom = 0.848534
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 31 )
text = "Kredits"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="credits" type="Label" parent="."]
anchor_left = 0.229492
anchor_top = 0.781824
anchor_right = 0.373047
anchor_bottom = 0.848599
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 27 )
text = "kredits"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="credits0" type="Label" parent="credits"]
anchor_top = -0.0193965
anchor_right = 1.0
anchor_bottom = 1.02938
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 28 )
text = "kredits"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="play2" type="Label" parent="."]
anchor_left = 0.427734
anchor_top = 0.826833
anchor_right = 0.578125
anchor_bottom = 0.885465
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 31 )
text = "maglaro"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="play" type="Label" parent="."]
anchor_left = 0.420898
anchor_top = 0.825166
anchor_right = 0.584961
anchor_bottom = 0.882169
margin_top = -3.05176e-05
margin_bottom = -6.10352e-05
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 27 )
text = "maglaro"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="play0" type="Label" parent="play"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 28 )
text = "maglaro"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="exit2" type="Label" parent="."]
anchor_left = 0.640625
anchor_top = 0.791826
anchor_right = 0.759766
anchor_bottom = 0.845572
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 31 )
text = "umalis"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="exit" type="Label" parent="."]
anchor_left = 0.641602
anchor_top = 0.788492
anchor_right = 0.758789
anchor_bottom = 0.840609
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 27 )
text = "umalis"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="exit0" type="Label" parent="exit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 28 )
text = "umalis"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.174805
anchor_top = 0.521772
anchor_right = 0.832031
anchor_bottom = 0.827961
margin_right = -2.0
margin_bottom = -3.05176e-05
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="creditContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 62.0
margin_right = 202.0
margin_bottom = 188.0
__meta__ = {
"_edit_lock_": true
}

[node name="CreditsButton" type="TextureButton" parent="HBoxContainer/creditContainer"]
margin_top = 24.0
margin_right = 140.0
margin_bottom = 164.0
rect_min_size = Vector2( 140, 140 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="creditsPic" type="TextureRect" parent="HBoxContainer/creditContainer/CreditsButton"]
anchor_left = 0.16
anchor_top = 0.17059
anchor_right = 0.824
anchor_bottom = 0.837256
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="playContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 242.0
margin_right = 427.0
margin_bottom = 188.0
__meta__ = {
"_edit_lock_": true
}

[node name="PlayButton" type="TextureButton" parent="HBoxContainer/playContainer"]
margin_top = 1.0
margin_right = 185.0
margin_bottom = 186.0
rect_min_size = Vector2( 185, 185 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="playPic" type="TextureRect" parent="HBoxContainer/playContainer/PlayButton"]
anchor_left = 0.23494
anchor_top = 0.136905
anchor_right = 0.885542
anchor_bottom = 0.839286
margin_right = 1.52588e-05
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="exitContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 467.0
margin_right = 607.0
margin_bottom = 188.0
rect_min_size = Vector2( 128, 128 )
__meta__ = {
"_edit_lock_": true
}

[node name="ExitButton" type="TextureButton" parent="HBoxContainer/exitContainer"]
margin_top = 24.0
margin_right = 140.0
margin_bottom = 164.0
rect_min_size = Vector2( 140, 140 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="exitPic" type="TextureRect" parent="HBoxContainer/exitContainer/ExitButton"]
anchor_left = 0.152
anchor_top = 0.154344
anchor_right = 0.832
anchor_bottom = 0.84482
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="FadeScale" type="TextureRect" parent="."]
visible = false
anchor_left = -0.0234375
anchor_top = -0.0439739
anchor_right = 1.02539
anchor_bottom = 1.04072
rect_min_size = Vector2( 200, 500 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="CreditsPopup" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="HBoxContainer/creditContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/playContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="HBoxContainer/exitContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
